kubernetes/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service

spec:
  replicas: 1
  selector:
    matchLabels: 
      app: order-service
    
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: training16.azurecr.io/order-service:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
          requests:
            cpu: 50m
