kubernetes/workflow-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow
  namespace: folex-dev
  labels:
    app: workflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflow
  template:
    metadata:
      labels:
        app: workflow
    spec:
      containers:
      - name: workflow-service
        image: training16.azurecr.io/folex/workflow
        resources:
          requests:
            cpu: "20m"
            memory: "256Mi"
          limits:
            cpu: "700m"
            memory: "512Mi"
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket: 
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
