kubernetes/factory-service.yml
apiVersion: v1
kind: Service
metadata:
  name: factory-service
  labels:
    app: factory

spec:
  selector:
    app: factory
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
