kubernetes/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: watch-order
  labels:
    apps: watch-order

spec:
  selector:
    apps: watch-order
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  type: LoadBalancer
