kubernetes/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order-service

spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
