kubernetes/wedding-watches-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wedding-watch-service
  labels:
    app: wedding-watches
  
spec:
  selector:
    app: wedding-watches
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  type: LoadBalancer
